--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "classnames": "^2.2.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "recharts": "^1.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
