--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
+    "react-scrollspy": "^3.3.5",
     "recharts": "^1.4.2"
   },
   "scripts": {
