--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
     "react-scrollspy": "^3.3.5",
+    "react-sticky-box": "^0.8.0",
     "recharts": "^1.4.2"
   },
   "scripts": {
