--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-scripts": "2.1.3",
     "react-scrollspy": "^3.3.5",
     "react-sticky-box": "^0.8.0",
-    "recharts": "^1.4.2"
+    "recharts": "^1.4.2",
+    "slugify": "^1.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
