--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "/gerardobort/openqube-3",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-brands-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "classnames": "^2.2.6",
     "react": "^16.7.0",
