--- a/pipeline/pyproject.toml
+++ b/pipeline/pyproject.toml
@@ -6,6 +6,10 @@ authors = ["Pablo Fernandez <fernandezpablo85@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+jupyterlab = "^2.2.4"
+jupyter = "^1.0.0"
+notebook = "^6.1.1"
+pandas = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 
