--- a/pipeline/pyproject.toml
+++ b/pipeline/pyproject.toml
@@ -10,8 +10,14 @@ jupyterlab = "^2.2.4"
 jupyter = "^1.0.0"
 notebook = "^6.1.1"
 pandas = "^1.1.0"
+nb_black = "^1.0.7"
+black = "^19.10b0"
+matplotlib = "^3.3.0"
 
 [tool.poetry.dev-dependencies]
+
+[tool.black]
+line-length = 100
 
 [build-system]
 requires = ["poetry>=0.12"]
